--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-material-ui-form-validator": "^2.1.4",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.2",
+    "react-text-mask": "^5.4.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^1.0.1"
